--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    // change for heroku
-    // "test": "echo \"Error: no test specified\" && exit 1"
     "start": "node app"
   },
   "repository": {
@@ -18,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/kchang00/chang_k_introNode_InClass/issues"
   },
-  "homepage": "https://github.com/kchang00/chang_k_introNode_InClass#readme"
+  "homepage": "https://github.com/kchang00/chang_k_introNode_InClass#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "hbs": "^4.0.5",
+    "mysql": "^2.17.1",
+    "sql": "^0.78.0"
+  }
 }
